# modern-python-setup

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
src/mpspkg/: __init__.py  baz.py  foo.py
tests/: test_baz.py  test_foo.py
